# aoc

./: .gitignore  Cargo.toml  LICENSE
2017/day1/: Makefile  captcha.cpp  captcha.pl  captcha_input_pl.txt  captcha_part2.cpp  test.pl
2017/day10/: CMakeLists.txt  part1.cpp  part2.cpp
2017/day11/: CMakeLists.txt
2017/day12/: CMakeLists.txt
2017/day2/: Makefile  checksum.cpp  checksum_part2.cpp
2017/day3/: CMakeLists.txt  part1.cpp  part2.cpp
2017/day4/: CMakeLists.txt  part1.cpp  part2.cpp
2017/day5/: CMakeLists.txt  part1.cpp  part2.cpp
2017/day6/: CMakeLists.txt  part1.cpp  part2.cpp
2017/day7/: CMakeLists.txt
2017/day8/: CMakeLists.txt
2017/day9/: CMakeLists.txt
2019/day1/part1/: main.cpp
2019/day1/part2/: Makefile  main.cpp
2019/day2/part1/: main.cpp
2019/day2/part2/: main.cpp
2019/day3/part1/: Cargo.toml
2019/day3/part1/src/: main.rs
2019/template/: Makefile  main.cpp
2023/: Cargo.toml
2023/day1/: day1_1.rs  day1_2.rs  part1.rs  part2.rs
2023/day2/: common.rs  part1.rs  part2.rs
2023/day3/: common.rs  part1.rs  part2.rs
2024/: Cargo.toml
2024/day1/: part1.rs  part2.rs
2024/day2/: part1.rs  part2.rs
2024/day3/: part1.rs  part2.rs
2024/day4/: part1.rs  part2.rs
2024/day5/: part1.rs  part2.rs
2025/: Cargo.toml
2025/day1/: day.rs  part1.rs  part2.rs
2025/day2/: day.rs  part1.rs  part2.rs
2025/day3/: day.rs  part1.rs  part2.rs
2025/day4/: day.rs  part1.rs  part2.rs
2025/day5/: day.rs  part1.rs  part2.rs
2025/day6/: day.rs  part1.rs  part2.rs
2025/day7/: day.rs  part1.rs
template/: day.rs  part.rs  part1.rs
