[package]
name = "aoc-2025"
version = "0.0.0"
publish = false
edition = "2024"

[[bin]]
name = "day1_1"
path = "day1/part1.rs"

[[bin]]
name = "day1_2"
path = "day1/part2.rs"

[[bin]]
name = "day2_1"
path = "day2/part1.rs"

[[bin]]
name = "day2_2"
path = "day2/part2.rs"

[dependencies]
itertools = "0.14.0"
nom = "8.0.0"
