[package]
name = "aoc-2025"
version = "0.0.0"
publish = false
edition = "2024"

[[bin]]
name = "day1_1"
path = "day1/part1.rs"

[[bin]]
name = "day1_2"
path = "day1/part2.rs"

[[bin]]
name = "day2_1"
path = "day2/part1.rs"

[[bin]]
name = "day2_2"
path = "day2/part2.rs"


[[bin]]
name = "day3_1"
path = "day3/part1.rs"

[[bin]]
name = "day3_2"
path = "day3/part2.rs"

[[bin]]
name = "day4_1"
path = "day4/part1.rs"

[[bin]]
name = "day4_2"
path = "day4/part2.rs"


[[bin]]
name = "day5_1"
path = "day5/part1.rs"

[[bin]]
name = "day5_2"
path = "day5/part2.rs"

[[bin]]
name = "day6_1"
path = "day6/part1.rs"

[[bin]]
name = "day6_2"
path = "day6/part2.rs"

[[bin]]
name = "day7_1"
path = "day7/part1.rs"

[[bin]]
name = "day7_2"
path = "day7/part2.rs"

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
assert_matches = { workspace = true }
rayon = { workspace = true }
